add navigation bar to the home, explore and signup pages

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" id="signup">
+<html lang="en" id="jdr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
+    <title>JDR</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header id="mainheader">
-            <h1 id="mainwelcome">Sign up to the JORDANS, DORSET and Ryvita Newsletter</h1>
+            <h1 id="mainwelcome">Welcome to JORDANS, DORSET and Ryvita</h1>
             <nav>
                 <ul id="mainmenu">
                     <li>
@@ -26,3 +26,5 @@
             </nav>
     </header>
 </body>
+
+</html>
