Add footers with social media links with fontawesome icons

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -27,4 +27,27 @@
     </header>
 </body>
 
+<footer id="social">
+    <ul class="social">
+        <li>
+            <a href="https://www.facebook.com/Ryvita/" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com/ryvita?lang=en" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/user/RyvitaOfficial?app=desktop" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+        </li>
+        <li>
+            <a href="https://instagram.com/ryvitauk?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+        </li>
+    </ul>
+</footer>
+
+<script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+
 </html>
