Add images to the folder

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -25,6 +25,8 @@
                 </ul>
             </nav>
     </header>
+    <section id="mainsection"><h6>JDR</h6></section>
+    <section id="mainfooter"><h6>JDR VAlues</h6></section>
 </body>
 
 <footer id="social">
