--- a/signup.html
+++ b/signup.html
@@ -25,6 +25,29 @@
                 </ul>
             </nav>
     </header>
+
+    <div id="signupbody">
+        <h1 id="signuph1"><em> Let's Get You Registered to the AMS</em></h1>
+        <section id="signupsection">
+        <form class="signupform" method="get" action="amsinput.html">
+            <h2><em>AMS Sign Up Form</em></h2>
+            <div class="signupinputs">
+            <input type="text" name="name" placeholder="Enter Full Name" required>
+            <input type="text" name="email" placeholder="Enter E-mail Address" required>
+            <input type="text" name="email2" placeholder="Confirm E-mail Address" required>
+            <input type="text" name="password" placeholder="Enter Password" required>
+            <input type="text" name="password2" placeholder="Confirm Password" required>
+            <button type="submit">Sign Up</button>
+        </div>
+        </form>
+        <div class="signupinputs">
+        <form class="signupform" action="amsmain.html" method="get">
+             <button type="submit">Back</button>    
+        </form>
+        </div>
+        </section>
+    </div>
+
 </body>
 
 <footer id="social">
