Add h1, h2 and links to the signup form

--- a/signup.html
+++ b/signup.html
@@ -27,10 +27,10 @@
     </header>
 
     <div id="signupbody">
-        <h1 id="signuph1"><em> Let's Get You Registered to the AMS</em></h1>
+        <h1 id="signuph1"><em> Let's Get You Registered to the JDR Newsletter</em></h1>
         <section id="signupsection">
-        <form class="signupform" method="get" action="amsinput.html">
-            <h2><em>AMS Sign Up Form</em></h2>
+        <form class="signupform" method="get" action="thanks.html">
+            <h2><em>Registration form</em></h2>
             <div class="signupinputs">
             <input type="text" name="name" placeholder="Enter Full Name" required>
             <input type="text" name="email" placeholder="Enter E-mail Address" required>
@@ -41,7 +41,7 @@
         </div>
         </form>
         <div class="signupinputs">
-        <form class="signupform" action="amsmain.html" method="get">
+        <form class="signupform" action="jdrhome.html" method="get">
              <button type="submit">Back</button>    
         </form>
         </div>
