Make the signup form more responsive

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -17,7 +17,7 @@
                         <a href="jdrhome.html">Home</a>
                     </li>
                     <li>
-                        <a href="explorejdr.html">Explore JDR</a>
+                        <a href="explorejdr.html">Explore JDR Products/a>
                     </li>
                     <li>
                         <a href="signup.html">Sign Up to the JDR Newsletter</a>
