--- a/jdrhome.html
+++ b/jdrhome.html
@@ -26,7 +26,7 @@
             </nav>
     </header>
     <section id="mainsection"><h6>JDR</h6></section>
-            <div id="paragraph"><p>At Jordans Dorset Ryvita, we have a strong heritage of making whole grain foods and working with farmers to protect the countryside. Ever since our brands first came together, we have continued to act on these values.
+            <div id="paragraph">Jordans Dorset Ryvita, we have a strong heritage of making whole grain foods and working with farmers to protect the countryside. Ever since our brands first came together, we have continued to act on these values.
 
             We believe that natural foods that have been lightly processed are generally better for you –they tend to be higher in fibre, vitamins and minerals, and they taste great too!
         
