Add video and images to the explore jdr page

--- a/explorejdr.html
+++ b/explorejdr.html
@@ -27,6 +27,23 @@
     </header>
 </body>
 
+<section id="video">
+    <iframe width="100%" height="800px" src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
+</section>
+
+<section id="pic">
+  <img src="assets/images/pic2.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic1.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic3.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic4.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic5.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic6.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic7.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic8.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/pic9.jpg" alt="Jordans, Dorset & Ryvita">
+  <img src="assets/images/jdr.jpg" alt="Jordans, Dorset & Ryvita">
+</section>
+
 <footer id="social">
     <ul class="social">
         <li>
