--- a/thanks.html
+++ b/thanks.html
@@ -5,6 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
+<body>
+    <header id="mainheader">
+            <h1 id="mainwelcome">JORDANS, DORSET and Ryvita Newsletter</h1>
+            <nav>
+                <ul id="mainmenu">
+                    <li>
+                        <a href="jdrhome.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="explorejdr.html">Explore JDR Products</a>
+                    </li>
+                    <li>
+                        <a href="signup.html">Sign Up to the JDR Newsletter</a>
+                    </li>
+                </ul>
+            </nav>
+    </header>
+</body>
+
+<footer id="social">
+    <ul class="social">
+        <li>
+            <a href="https://www.facebook.com/Ryvita/" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com/ryvita?lang=en" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/user/RyvitaOfficial?app=desktop" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+        </li>
+        <li>
+            <a href="https://instagram.com/ryvitauk?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+        </li>
+    </ul>
+</footer>
+
+<script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+
 </html>
+
