--- a/signup.html
+++ b/signup.html
@@ -32,8 +32,8 @@
             <h2><em>Registration form</em></h2>
             <div class="signupinputs">
             <input type="text" name="name" placeholder="Enter Full Name" required>
-            <input type="text" name="email" placeholder="Enter E-mail Address" required>
-            <input type="text" name="email2" placeholder="Confirm E-mail Address" required>
+            <input type="email" pattern="[^ @]*@[^ @]*" name="email" placeholder="Enter E-mail Address" required>
+            <input type="email" pattern="[^ @]*@[^ @]*" name="email2" placeholder="Confirm E-mail Address" required>
             <input type="text" name="password" placeholder="Enter Password" required>
             <input type="text" name="password2" placeholder="Confirm Password" required>
             <button type="submit">Sign Up</button>
