Add background image to the thanks page

--- a/thanks.html
+++ b/thanks.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body id="thanksbody">
     <header id="mainheader">
             <h1 id="mainwelcome">JORDANS, DORSET and Ryvita Newsletter</h1>
             <nav>
