--- a/thanks.html
+++ b/thanks.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thanks</title>
+    <title>Thank you!</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body id="thanksbody">
+<body>
     <header id="mainheader">
             <h1 id="mainwelcome">JORDANS, DORSET and Ryvita Newsletter</h1>
             <nav>
@@ -17,7 +17,7 @@
                         <a href="jdrhome.html">Home</a>
                     </li>
                     <li>
-                        <a href="explorejdr.html">Explore JDR Products</a>
+                        <a href="explorejdr.html">Explore JDR</a>
                     </li>
                     <li>
                         <a href="signup.html">Sign Up to the JDR Newsletter</a>
@@ -25,6 +25,11 @@
                 </ul>
             </nav>
     </header>
+
+    <div id="thanksbody">
+        <h1>Thank you for signing up to our JDR Newsletter</h1>
+    </div>
+
 </body>
 
 <footer id="social">
@@ -51,4 +56,3 @@
 <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 
 </html>
-
