--- a/thanks.html
+++ b/thanks.html
@@ -27,7 +27,14 @@
     </header>
 
     <div id="thanksbody">
-        <h1>Thank you for signing up to our JDR Newsletter</h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section id="thankssection"><h1>Thank you for signing up to our JDR Newsletter!</h1>
+            <p>For more information about our products or for tips about delicious recipes, please use our social links below</p>
+        </section>
     </div>
 
 </body>
