--- a/thanks.html
+++ b/thanks.html
@@ -32,8 +32,9 @@
         <br>
         <br>
         <br>
-        <section id="thankssection"><h1>Thank you for signing up to our JDR Newsletter!</h1>
+        <section id="thanksh1"><h1>Thank you for signing up to our JDR Newsletter!</h1>
             <p>For more information about our products or for tips about delicious recipes, please use our social links below</p>
+            <section id="thankssection"></section>
         </section>
     </div>
 
