Add media query

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -29,11 +29,11 @@
 
     <section id="mainfooter"><h6>JDR VAlues</h6></section>
 
-    <div id="paragraph">Jordans Dorset Ryvita, we have a strong heritage of making whole grain foods and working with farmers to protect the countryside. Ever since our brands first came together, we have continued to act on these values.
+    <div id="paragraph">At Jordans Dorset Ryvita, we have a strong heritage of making whole grain foods and working with farmers to protect the countryside. Ever since our brands first came together, we have continued to act on these values.
 
         We believe that natural foods that have been lightly processed are generally better for you –they tend to be higher in fibre, vitamins and minerals, and they taste great too!
     
-        Our Brands have a long-standing commitment to health and sustainability, and we have so much to be proud of, but we know that there is still more we need to do, to improve our social and environmental impacts.</p></div>
+        Our Brands have a long-standing commitment to health and sustainability, and we have so much to be proud of.</p></div>
             
 </body>
 
