--- a/thanks.html
+++ b/thanks.html
@@ -33,7 +33,7 @@
         <br>
         <br>
         <section id="thanksh1"><h1>Thank you for signing up to our JDR Newsletter!</h1>
-            <p>For more information about our products or for tips about delicious recipes, please use our social links below</p>
+            <p>For more information about our products or for tips about delicious and healthy recipes, please use our social links below.</p>
             <section id="thankssection"></section>
         </section>
     </div>
