--- a/jdrhome.html
+++ b/jdrhome.html
@@ -37,7 +37,7 @@
             
 </body>
 
-<footer id="social">
+<footer class="socialfooter">
     <ul class="social">
         <li>
             <a href="https://www.facebook.com/Ryvita/" target="_blank" rel="noopener"
