--- a/explorejdr.html
+++ b/explorejdr.html
@@ -44,7 +44,7 @@
   <img src="assets/images/jdr.jpg" alt="Jordans, Dorset & Ryvita">
 </section>
 
-<footer id="social">
+<footer class="social">
     <ul class="social">
         <li>
             <a href="https://www.facebook.com/Ryvita/" target="_blank" rel="noopener"
