--- a/thanks.html
+++ b/thanks.html
@@ -32,15 +32,15 @@
         <br>
         <br>
         <br>
-        <section id="thanksh1"><h1>Thank you for signing up to our JDR Newsletter!</h1>
-            <p i="thanksp">For more information about our products or for tips about delicious and healthy recipes, please use our social links below.</p>
-            <section id="thankssection"></section>
+        <section id="thanksh1"><h2>Thank you for signing up to our JDR Newsletter!</h2>
+            <p id="thanksp">For more information about our products or for tips about delicious and healthy recipes, please use our social links below.</p>
+            <div id="thankssection"></div>
         </section>
     </div>
 
 </body>
 
-<footer id="social">
+<footer class="socialfooter">
     <ul class="social">
         <li>
             <a href="https://www.facebook.com/Ryvita/" target="_blank" rel="noopener"
