--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
 
 </body>
 
-<footer class="socialfooter">
+<footer>
     <ul class="social">
         <li>
             <a href="https://www.facebook.com/Ryvita/" target="_blank" rel="noopener"
