--- a/explorejdr.html
+++ b/explorejdr.html
@@ -26,7 +26,7 @@
             </nav>
     </header>
     <div id="video">
-        <iframe width="100%" height="800px" src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
+        <iframe src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
     </div>
     
     <div id="pic">
