add dropdown for nav bar when using small size screen

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -23,6 +23,13 @@
                         <a href="signup.html">Sign Up to the JDR Newsletter</a>
                     </li>
                 </ul>
+
+                <select>                   
+                    <option value="jdrhome.html">Home</option> 
+                    <option value="explorejdr.html">Explore JDR Products</option> 
+                    <option value="signup.html">Sign Up to the JDR Newsletter</option> 
+                  </select> 
+
             </nav>
     </header>
     <section id="mainsection"><h6>JDR</h6></section>
