New commit message.

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -23,14 +23,22 @@
                         <a href="signup.html">Sign Up to the JDR Newsletter</a>
                     </li>
                 </ul>
-
-                <select>                   
-                    <option value="jdrhome.html">Home</option> 
-                    <option value="explorejdr.html">Explore JDR Products</option> 
-                    <option value="signup.html">Sign Up to the JDR Newsletter</option> 
-                  </select> 
+                
+                <div class="navbar">
+                    <div class="dropdown">
+                      <button class="dropbtn">///
+                        <i class="fa fa-caret-down"></i>
+                      </button>
+                      <div class="dropdown-content">
+                        <a href="jdrhome.html">Home</a>
+                        <a href="explorejdr.html">Explore JDR Products</a>
+                        <a href="signup.html">Sign Up to the JDR Newsletter</a>
+                      </div>
+                    </div>
+                  </div>
 
             </nav>
+
     </header>
     <section id="mainsection"><h6>JDR</h6></section>
 
