--- a/thanks.html
+++ b/thanks.html
@@ -23,6 +23,20 @@
                         <a href="signup.html">Sign Up to the JDR Newsletter</a>
                     </li>
                 </ul>
+
+                <div class="navbar">
+                    <div class="dropdown">
+                      <button class="dropbtn">///
+                        <i class="fa fa-caret-down"></i>
+                      </button>
+                      <div class="dropdown-content">
+                        <a href="jdrhome.html">Home</a>
+                        <a href="explorejdr.html">Explore JDR Products</a>
+                        <a href="signup.html">Sign Up to the JDR Newsletter</a>
+                      </div>
+                    </div>
+                  </div>
+
             </nav>
     </header>
 
