--- a/signup.html
+++ b/signup.html
@@ -48,8 +48,8 @@
             <input type="text" name="name" placeholder="Enter Full Name" required>
             <input type="email" pattern="[^ @]*@[^ @]*" name="email" placeholder="Enter E-mail Address" required>
             <input type="email" pattern="[^ @]*@[^ @]*" name="email2" placeholder="Confirm E-mail Address" required>
-            <input type="text" name="password" placeholder="Enter Password" required>
-            <input type="text" name="password2" placeholder="Confirm Password" required>
+            <input type="password" name="password" placeholder="Enter Password" required>
+            <input type="password" name="password2" placeholder="Confirm Password" required>
             <button type="submit">Sign Up</button>
         </div>
         </form>
