--- a/explorejdr.html
+++ b/explorejdr.html
@@ -42,6 +42,12 @@
     <div id="video">
         <iframe src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
     </div>
+
+    <div id="paragraph"><p>At Jordans Dorset Ryvita, we have a strong heritage of making whole grain foods and working with farmers to protect the countryside. Ever since our brands first came together, we have continued to act on these values.
+
+        We believe that natural foods that have been lightly processed are generally better for you –they tend to be higher in fibre, vitamins and minerals, and they taste great too!
+    
+        Our Brands have a long-standing commitment to health and sustainability, and we have so much to be proud of.</p></div>
     
     <div id="pic">
       <img src="assets/images/pic2.jpg" alt="Jordans, Dorset & Ryvita">
