Add back button to the thank you page

--- a/thanks.html
+++ b/thanks.html
@@ -44,12 +44,16 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
         <section id="thanksh1"><h2>Thank you for signing up to our JDR Newsletter!</h2>
             <br><br>
             <p id="thanksp">For more information about our products or for tips about delicious and healthy recipes, please use our social links below.</p>
+            <div class="signupinputs">
+                <form class="signupform" action="jdrhome.html" method="get">
+                     <button type="submit">Go Back</button>    
+                </form>
+            </div>
             <div id="thankssection"></div>
+
         </section>
     </div>
 
