Add paragraph and style to the home page

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -41,11 +41,9 @@
 
     </header>
 
-    <div id="paragraph"><p>At Jordans Dorset Ryvita, we have a strong heritage of making whole grain foods and working with farmers to protect the countryside. Ever since our brands first came together, we have continued to act on these values.
+    <div id="paragraphhome"><p>We bake and blend naturally wholesome ingredients with a light touch to help people enjoy healthier lifestyles and we’re always looking to improve the health and nutrition of our products.
 
-        We believe that natural foods that have been lightly processed are generally better for you –they tend to be higher in fibre, vitamins and minerals, and they taste great too!
-    
-        Our Brands have a long-standing commitment to health and sustainability, and we have so much to be proud of.</p></div>
+        Our granolas, mueslis and porridge are all made from 100% natural ingredients and all of our products are a source of fibre, with many high in fibre from the oats, rye and other cereals that we use.</p></div>
 
     <section id="mainsection"><h6>JDR</h6></section>
 
