--- a/jdrhome.html
+++ b/jdrhome.html
@@ -10,7 +10,7 @@
 
 <body>
     <header id="mainheader">
-            <h1 id="mainwelcome">Welcome to JORDANS, DORSET and Ryvita</h1>
+            <h1 id="mainwelcome">Eat Healthy with JORDANS, DORSET and RYVITA</h1>
             <nav>
                 <ul id="mainmenu">
                     <li>
