Add dorset cereals pictures

--- a/explorejdr.html
+++ b/explorejdr.html
@@ -44,9 +44,10 @@
 
         We believe that natural foods that have been lightly processed are generally better for you –they tend to be higher in fibre, vitamins and minerals, and they taste great too!
     
-        Our Brands have a long-standing commitment to health and sustainability, and we have so much to be proud of.</p></div>
+        Our Brands have a long-standing commitment to health and sustainability, and we have so much to be proud of.</p>
+    </div>
 
-        <div class="brands"><h2>Jordans Cereals</h2></div>
+    <div class="brands"><h2>Jordans Cereals</h2></div>
     <div id="video">
         <iframe src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
     </div>
@@ -61,23 +62,23 @@
       <img src="assets/images/j4.jpg" alt="Jordans, Dorset & Ryvita">
     </div>
 
+    <div class="brands"><h2>Dorset Cereals</h2></div>
     <div id="video">
-        <iframe src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
+        <iframe src="https://www.youtube.com/embed/7CvqT_o-IqE"></iframe>
     </div>
     
     <div id="pic">
-      <img src="assets/images/pic2.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic1.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic3.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic4.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic5.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic6.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic7.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic8.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic9.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/jdr.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d1.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d2.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d3.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d4.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d5.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d5.avif" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d6.avif" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d7.avif" alt="Jordans, Dorset & Ryvita">
     </div>
 
+    <div class="brands"><h2>Ryvita</h2></div>
     <div id="video">
         <iframe src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
     </div>
