Add ryvita video

--- a/explorejdr.html
+++ b/explorejdr.html
@@ -76,11 +76,12 @@
       <img src="assets/images/d5.avif" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/d6.avif" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/d7.avif" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d8.jpg" alt="Jordans, Dorset & Ryvita">
     </div>
 
     <div class="brands"><h2>Ryvita</h2></div>
     <div id="video">
-        <iframe src="https://www.youtube.com/embed/d4pYCduqgmY"></iframe>
+        <iframe src="https://www.youtube.com/embed/nHVPT44XhfY"></iframe>
     </div>
     
     <div id="pic">
