--- a/explorejdr.html
+++ b/explorejdr.html
@@ -85,16 +85,18 @@
     </div>
     
     <div id="pic">
-      <img src="assets/images/pic2.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic1.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic3.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic4.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic5.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic6.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic7.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic8.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/pic9.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/jdr.jpg" alt="Jordans, Dorset & Ryvita">
+        <img src="assets/images/r12.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r2.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r3.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r4.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r5.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r6.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r7.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r8.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r9.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r10.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r11.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r1.jpg" alt="Jordans, Dorset & Ryvita">
     </div>
 
     
