Add ryvita logo

--- a/explorejdr.html
+++ b/explorejdr.html
@@ -79,13 +79,13 @@
       <img src="assets/images/d8.jpg" alt="Jordans, Dorset & Ryvita">
     </div>
 
-    <div class="brands"><h2>Ryvita</h2></div>
+    <div class="brands"><img src="assets/images/r0.png" alt="Jordans, Dorset & Ryvita"></div>
     <div id="video">
         <iframe src="https://www.youtube.com/embed/nHVPT44XhfY"></iframe>
     </div>
     
     <div id="pic">
-        <img src="assets/images/r12.jpg" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/r12.jpg" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/r2.jpg" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/r3.jpg" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/r4.jpg" alt="Jordans, Dorset & Ryvita">
