Add more style to the paragraphs

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -41,15 +41,16 @@
 
     </header>
 
+    <div id="paragraphhome"><p>"We bake and blend naturally wholesome ingredients with a light touch to help people enjoy healthier lifestyles and we’re always looking to improve the health and nutrition of our products.
+
+        Our granolas, mueslis and porridge are all made from 100% natural ingredients and all of our products are a source of fibre, with many high in fibre from the oats, rye and other cereals that we use."</p>
+    </div>
+
     <section id="mainsection"><h6>JDR</h6></section>
 
     <section id="mainfooter"><h6>JDR VAlues</h6></section>
 
-    <div id="paragraphhome"><p>We bake and blend naturally wholesome ingredients with a light touch to help people enjoy healthier lifestyles and we’re always looking to improve the health and nutrition of our products.
-
-        Our granolas, mueslis and porridge are all made from 100% natural ingredients and all of our products are a source of fibre, with many high in fibre from the oats, rye and other cereals that we use.</p>
-    </div>
-
+<hr>
 <footer>
     <ul class="social">
         <li>
