Add change to the main paragraph

--- a/jdrhome.html
+++ b/jdrhome.html
@@ -41,9 +41,7 @@
 
     </header>
 
-    <div id="paragraphhome"><p>"We bake and blend naturally wholesome ingredients with a light touch to help people enjoy healthier lifestyles and we’re always looking to improve the health and nutrition of our products.
-
-        Our granolas, mueslis and porridge are all made from 100% natural ingredients and all of our products are a source of fibre, with many high in fibre from the oats, rye and other cereals that we use."</p>
+    <div id="paragraphhome"><p>"At Jordans Dorset Ryvita, we’re all about helping people around the world live healthier lives whilst minimising our impact on the world around us, and it’s our three brilliant brands that allow us to do this. Be it Jordans Cereals, Dorset Cereals or Ryvita: all three make great tasting, honest real food which we’re really proud of.."</p>
     </div>
 
     <section id="mainsection"><h6>JDR</h6></section>
