Add more style to the explore page

--- a/explorejdr.html
+++ b/explorejdr.html
@@ -75,7 +75,7 @@
     <br>
 
     <div class="brands">
-        <img src="assets/images/d9.avif" alt="Jordans, Dorset & Ryvita">
+        <img src="assets/images/d09.PNG" alt="Jordans, Dorset & Ryvita">
     </div>
     <div id="video">
         <iframe src="https://www.youtube.com/embed/7CvqT_o-IqE"></iframe>
