Change image format on dorset brand

--- a/explorejdr.html
+++ b/explorejdr.html
@@ -86,9 +86,9 @@
       <img src="assets/images/d2.jpg" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/d3.jpg" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/d4.jpg" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/d5.avif" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/d6.avif" alt="Jordans, Dorset & Ryvita">
-      <img src="assets/images/d7.avif" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d5.PNG" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d6.PNG" alt="Jordans, Dorset & Ryvita">
+      <img src="assets/images/d7.PNG" alt="Jordans, Dorset & Ryvita">
       <img src="assets/images/d8.jpg" alt="Jordans, Dorset & Ryvita">
     </div>
     <hr>
