--- a/jdrhome.html
+++ b/jdrhome.html
@@ -41,7 +41,7 @@
 
     </header>
 
-    <div id="paragraphhome"><p>"At Jordans Dorset Ryvita, we’re all about helping people around the world live healthier lives whilst minimising our impact on the world around us, and it’s our three brilliant brands that allow us to do this. Be it Jordans Cereals, Dorset Cereals or Ryvita: all three make great tasting, honest real food which we’re really proud of.."</p>
+    <div id="paragraphhome"><p>"At Jordans Dorset Ryvita, we’re all about helping people around the world live healthier lives whilst minimising our impact on the world around us, and it’s our three brilliant brands that allow us to do this. Be it Jordans Cereals, Dorset Cereals or Ryvita: all three make great tasting, honest real food which we’re really proud of."</p>
     </div>
 
     <section id="mainsection"><h6>JDR</h6></section>
